# CardinalAura

./: .gitignore  README.md
CardinalAura/: .gitignore  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
CardinalAura/src/: App.css  App.tsx  main.tsx
CardinalAura/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
CardinalAura/src-tauri/db/initial_set_up/: 0000_init_db.sql  0001_init_tables.sql
CardinalAura/src-tauri/icons/: icon.icns
CardinalAura/src-tauri/src/: main.rs  mod.rs
CardinalAura/src-tauri/src/command/: Cargo.toml
CardinalAura/src-tauri/src/command/src/: lib.rs
CardinalAura/src-tauri/src/command/src/register_function/: mod.rs  register_url.rs
CardinalAura/src-tauri/src/controller/: Cargo.toml
CardinalAura/src-tauri/src/controller/src/: lib.rs
CardinalAura/src-tauri/src/controller/src/register/: mod.rs  register_url_controller.rs
CardinalAura/src-tauri/src/dependency_injection/: Cargo.toml
CardinalAura/src-tauri/src/dependency_injection/src/: lib.rs
CardinalAura/src-tauri/src/domain/: Cargo.toml  mod.rs  rss_feed_site.rs
CardinalAura/src-tauri/src/domain/src/: lib.rs  rss_feed_site.rs
CardinalAura/src-tauri/src/driver/: Cargo.toml  mod.rs
CardinalAura/src-tauri/src/driver/core_db/: driver.rs  mod.rs  register_driver.rs  sqlite_driver.rs
CardinalAura/src-tauri/src/driver/db/initial_setup/: 0001_init_tables.sql
CardinalAura/src-tauri/src/driver/src/: http_req_driver.rs  lib.rs  register_driver.rs  sqlite_driver.rs
CardinalAura/src-tauri/src/gateway/: Cargo.toml
CardinalAura/src-tauri/src/gateway/src/: lib.rs
CardinalAura/src-tauri/src/gateway/src/register_feed/: mod.rs  register_url_gateway.rs
CardinalAura/src-tauri/src/port/: Cargo.toml
CardinalAura/src-tauri/src/port/src/: lib.rs
CardinalAura/src-tauri/src/port/src/http_client/: http_client_port.rs  mod.rs
CardinalAura/src-tauri/src/port/src/register/: mod.rs  register_feed_url_port.rs
CardinalAura/src-tauri/src/port/src/repository/: mod.rs  repository_port.rs
CardinalAura/src-tauri/src/usecase/: Cargo.toml
CardinalAura/src-tauri/src/usecase/src/: lib.rs
CardinalAura/src-tauri/src/usecase/src/register_function/: mod.rs  register_url_usecase.rs
CardinalAura/src/components/elements/: CloseButton.tsx  DescriptionModal.tsx  SubmitButton.tsx
CardinalAura/src/components/services/: Register.1.tsx  Register.tsx  Stream.tsx
CardinalAura/src/lib/commands/feed/: register.ts
CardinalAura/src/lib/schema/: url.ts
CardinalAura/src/lib/types/: feedItem.ts
CardinalAura/src/routes/: Home.tsx
cardianl-aura/src-tauri/: Cargo.toml  tauri.conf.json
