[package]
name = "cardinal_aura"
version = "0.0.0"
description = "A Simple RSS Feed Reader App"
authors = ["Kaikei Ezaki"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }

[dependencies]
tauri = { version = "1.5.2", features = ["shell-open"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15.0"
directories = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
