[package]
name = "cardinal_aura"
version = "0.0.1"
description = "A Simple RSS Feed Reader App"
authors = ["Kaikei Ezaki"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = [
  "src/domain",
  "src/driver",
  "src/controller",
  "src/usecase",
  "src/command",
  "src/gateway",
  "src/port",
  "src/dependency_injection",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }

[dependencies]
tauri = { version = "1.5.2", features = [ "dialog-message", "dialog-confirm", "shell-open"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }
futures = "0.3"
dotenv = "0.15.0"
directories = "5.0.1"
uuid = { version = "1.5.0", features = ["v4"] }
tokio = {  version = "1.34.0", features = ["full"] }

# own modules
driver = { path = "src/driver", version = "0.1.0" }
controller = { path = "src/controller", version = "0.1.0" }
usecase = { path = "src/usecase", version = "0.1.0" }
command = { path = "src/command", version = "0.1.0"     }
gateway = { path = "src/gateway", version = "0.1.0" }
port = { path = "src/port", version = "0.1.0" }
domain = { path = "src/domain", version = "0.1.0" }
dependency_injection = { path = "src/dependency_injection", version = "0.1.0" }

[workspace.dependencies]
tauri = { version = "1.5.2", features = [ "dialog-message", "dialog-confirm", "shell-open"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = { version = "0.1.74" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
