[package]
name = "dependency_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = "true", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }

# own dependencies
driver = { path = "../driver" }
