[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "time", "json"] }
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15.0"
directories = "5.0.1"
uuid = { version = "1.5.0", features = ["v4"] }

# own dependencies
domain = { path = "../domain" }
