[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { workspace = true }
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15.0"
directories = "5.0.1"
uuid = { version = "1.5.0", features = ["v4"] }
rss = { version = "2.0.6", features = ["builders"] }
url = "2.4.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.74"

# own dependencies
domain = { path = "../domain" }
port = { path = "../port" }
chrono = "0.4.31"
