[package]
name = "port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true }
async-trait = { workspace = true }
rss = {version = "2.0.6"}
mockall = "0.11.4"
sqlx ={ workspace = true }

# own dependencies
domain = { path = "../domain" }
