[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.11.4"

# local dependencies
domain = { path="../domain", version = "0.1.0"}
port = { path="../port", version = "0.1.0"}